<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_pager_first_button">First</string>
    <string name="crime_pager_last_button">Last</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete</string>
    <string name="create_crime">Create</string>
    <string name="delete_Crime_toast">Deleted! Retrieving view. </string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="no_crime_view">There are no crimes.</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="call_suspect">Call Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
      The crime was discovered on %2$s at %3$s. %4$s and %5$s.
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="permission_granted">Read Contacts permission granted</string>
    <string name="permission_denied">Read Contacts permission denied</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="image_dialog_title">Zoom thumbnail</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string> <string name="crime_photo_no_image_description">
        Crime scene photo (not set)
    </string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
</resources>
